--- a/hello-world.html
+++ b/hello-world.html
@@ -1,1 +1,2 @@
 <h1>Hello, WORLD!</h1>
+<p>Welcome to my first webstite! I am about to embark on the exciting jorney of learning how to code. Won{t you join me?</p>
